[tool.poetry]
name = "twined"
version = "0.5.6"
repository = "https://www.github.com/octue/twined"
description = "A library to help digital twins and data services talk to one another."
authors = [
    "Octue (github: octue) <support@octue.com>",
    "Tom Clark <tom@octue.com>",
    "Marcus Lugg <marcus@octue.com>",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
keywords = ["digital", "twins", "data", "services", "python", "schema"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
jsonschema = "^4"
python-dotenv = ">=0,<=2"

[tool.poetry.group.dev.dependencies]
tox = ">=3"
flake8 = "3.8.3"
black = "19.10.b0"
pre-commit = ">=2.6.0"
coverage = ">=5.2.1"
numpy = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
